# rust-covid-api

./: Cargo.toml  Dockerfile  LICENSE  Procfile  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker.yml  general.yml
src/: api_doc.rs  api_types.rs  constants.rs  lib.rs  main.rs  middleware.rs  types.rs  utils.rs
src/domains/: date_constraint_string.rs  mod.rs  query_params.rs
src/routes/: daily.rs  health.rs  index.rs  mod.rs  monthly.rs  yearly.rs
src/routes/daily/: common.rs  day.rs  index.rs  middleware.rs  mod.rs  month.rs  types.rs  year.rs
src/routes/monthly/: common.rs  index.rs  middleware.rs  mod.rs  month.rs  year.rs
src/routes/monthly/common/: middleware.rs  mod.rs  types.rs
src/routes/yearly/: common.rs  index.rs  mod.rs  year.rs
src/routes/yearly/common/: errors.rs  mod.rs  types.rs
src/types/: crate_own.rs  mod.rs  source_api.rs
tests/: daily.rs  index.rs  monthly.rs  yearly.rs
