[package]
name = "nodeflux-assignment"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "nodeflux_assignment"

[[bin]]
path = "src/main.rs"
name = "nodeflux_assignment"

[dependencies]
actix-web = "4.0.1"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-utilities = "0.0.0-alpha1"
derive_more = "0.99.17"
