[package]
name = "rust-covid-api"
version = "2.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "rust_covid_api"

[[bin]]
path = "src/main.rs"
name = "rust_covid_api"

[dependencies]
actix-web = "4.0.1"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
utoipa = { version = "1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "1", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
redis = "0.21.5"
futures-util = "0.3.21"
serde_json = "1.0"
chrono = "0.4"
chrono-utilities = "0.0.0-alpha1"
derive_more = "0.99.17"
actix-web-lab = "0.16.7"
serde_urlencoded = "0.7.1"
